chore: use .Release.Name where available & make use of added app-template features

--- a/kubernetes/apps/self-hosted/immich-folder-album-creator/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/immich-folder-album-creator/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name immich-folder-album-creator
+  name: immich-folder-album-creator
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: immich-folder-album-creator-secret
     template:
       data:
         API_KEY: "{{ .IMMICH_API_KEY }}"
