--- a/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name karakeep
+  name: karakeep
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: karakeep-secret
     template:
       data:
         ## Karakeep
