--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app dokuwiki
+  name: dokuwiki
 spec:
   interval: 1h
   chartRef:
@@ -19,10 +19,8 @@ spec:
   values:
     controllers:
       dokuwiki:
-        annotations:
-          reloader.stakater.com/auto: "true"
         containers:
-          dokuwiki:
+          app:
             image:
               repository: docker.io/dokuwiki/dokuwiki
               tag: stable
@@ -59,7 +57,6 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *port
@@ -78,6 +75,6 @@ spec:
               - *host
     persistence:
       storage:
-        existingClaim: ${VOLSYNC_CLAIM}
+        existingClaim: "{{ .Release.Name }}"
         globalMounts:
           - path: /storage
