--- a/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app karakeep
+  name: karakeep
 spec:
   interval: 1h
   chartRef:
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          web:
+          app:
             image:
               repository: ghcr.io/karakeep-app/karakeep
               tag: 0.26.0@sha256:f575a34ed3f8975225c156786442f177846126cf27d7fd37350f3af23c549d22
@@ -43,7 +43,7 @@ spec:
               OCR_LANGS: eng,swe
             envFrom: &envFrom
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness:
                 enabled: true
@@ -130,18 +130,15 @@ spec:
         fsGroup: *uid
         fsGroupChangePolicy: OnRootMismatch
     service:
-      web:
-        controller: *app
+      app:
         ports:
           http:
             port: 3000
       chrome:
-        controller: *app
         ports:
           http:
             port: 9222
       meilisearch:
-        controller: *app
         ports:
           http:
             port: 7700
@@ -153,7 +150,7 @@ spec:
             paths: &paths
               - path: /
                 service:
-                  identifier: web
+                  identifier: app
                   port: http
           - host: &customHost hoarder.${SECRET_DOMAIN}
             paths: *paths
@@ -166,13 +163,13 @@ spec:
         type: emptyDir
         advancedMounts:
           karakeep:
-            web:
+            app:
               - path: /app/apps/web/.next/cache
       data:
-        existingClaim: ${VOLSYNC_CLAIM}
+        existingClaim: "{{ .Release.Name }}"
         advancedMounts:
           karakeep:
-            web:
+            app:
               - path: /karakeep_data
                 subPath: karakeep_data
             meilisearch:
