--- a/kubernetes/apps/self-hosted/searxng/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/searxng/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name searxng
+  name: searxng
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: searxng-secret
     template:
       data:
         ## SearXNG
