chore: rename secrets

--- a/kubernetes/apps/security/onepassword/app/clustersecretstore.yaml
+++ b/kubernetes/apps/security/onepassword/app/clustersecretstore.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
-  name: &name onepassword
+  name: onepassword
 spec:
   provider:
     onepassword:
@@ -13,6 +13,6 @@ spec:
       auth:
         secretRef:
           connectTokenSecretRef:
-            name: *name
+            name: onepassword-secret
             key: token
             namespace: security
