--- a/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name democratic-csi-iscsi
+  name: democratic-csi-iscsi
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: democratic-csi-iscsi-secret
     template:
       data:
         driver-config-file.yaml: |
