--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
   values:
     controller:
       podAnnotations:
-        secret.reloader.stakater.com/reload: &secret democratic-csi-iscsi
+        secret.reloader.stakater.com/reload: &secret democratic-csi-iscsi-secret
       driver:
         image: &image
           registry: ghcr.io/democratic-csi/democratic-csi
