chore: use .Release.Name where available & make use of added app-template features

--- a/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
@@ -3,17 +3,17 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name immich-config
+  name: immich-config
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: immich-config-secret
     template:
       templateFrom:
         - configMap:
-            name: immich-config-tpl
+            name: immich-configmap
             items:
               - key: immich.json
   dataFrom:
@@ -26,13 +26,13 @@ spec:
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name immich
+  name: immich
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: immich-secret
     template:
       data:
         ## Immich
