--- a/kubernetes/apps/security/onepassword/app/helmrelease.yaml
+++ b/kubernetes/apps/security/onepassword/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app onepassword
+  name: onepassword
 spec:
   interval: 1h
   chartRef:
@@ -33,10 +33,10 @@ spec:
               OP_BUS_PORT: 11220
               OP_BUS_PEERS: localhost:11221
               OP_SESSION:
-                valueFrom:
+                valueFrom: &valueFrom
                   secretKeyRef:
-                    name: *app
-                    key: &key 1password-credentials.json
+                    name: "{{ .Release.Name }}-secret"
+                    key: 1password-credentials.json
             probes:
               liveness:
                 enabled: true
@@ -76,10 +76,7 @@ spec:
               OP_BUS_PORT: 11221
               OP_BUS_PEERS: localhost:11220
               OP_SESSION:
-                valueFrom:
-                  secretKeyRef:
-                    name: *app
-                    key: *key
+                valueFrom: *valueFrom
             probes:
               liveness:
                 enabled: true
@@ -110,7 +107,6 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *apiPort
