chore: use .Release.Name where available & make use of added app-template features

--- a/kubernetes/apps/observability/exporters/bazarr-exporter/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/exporters/bazarr-exporter/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name bazarr-exporter
+  name: bazarr-exporter
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: bazarr-exporter-secret
     template:
       data:
         APIKEY: "{{ .BAZARR_API_KEY }}"
