--- a/kubernetes/apps/observability/exporters/lidarr-exporter/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/exporters/lidarr-exporter/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name lidarr-exporter
+  name: lidarr-exporter
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: lidarr-exporter-secret
     template:
       data:
         APIKEY: "{{ .LIDARR_API_KEY }}"
