--- a/kubernetes/apps/observability/exporters/prowlarr-exporter/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/exporters/prowlarr-exporter/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name prowlarr-exporter
+  name: prowlarr-exporter
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: prowlarr-exporter-secret
     template:
       data:
         APIKEY: "{{ .PROWLARR_API_KEY }}"
