--- a/kubernetes/apps/observability/exporters/prowlarr-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/exporters/prowlarr-exporter/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app prowlarr-exporter
+  name: prowlarr-exporter
 spec:
   interval: 1h
   chartRef:
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          prowlarr-exporter:
+          app:
             image:
               repository: ghcr.io/onedr0p/exportarr
               tag: v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
@@ -34,7 +34,7 @@ spec:
               URL: http://prowlarr.media.svc.cluster.local:80
             envFrom:
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness:
                 enabled: true
@@ -57,13 +57,11 @@ spec:
         runAsGroup: *uid
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *port
     serviceMonitor:
       app:
-        serviceName: *app
         endpoints:
           - port: http
             scheme: http
