--- a/kubernetes/apps/observability/exporters/radarr-exporter/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/exporters/radarr-exporter/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name radarr-exporter
+  name: radarr-exporter
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: radarr-exporter-secret
     template:
       data:
         APIKEY: "{{ .RADARR_API_KEY }}"
