--- a/kubernetes/apps/observability/exporters/sonarr-exporter/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/exporters/sonarr-exporter/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name sonarr-exporter
+  name: sonarr-exporter
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: sonarr-exporter-secret
     template:
       data:
         APIKEY: "{{ .SONARR_API_KEY }}"
