--- a/kubernetes/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo-server/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app echo-server
+  name: echo-server
 spec:
   interval: 1h
   chartRef:
@@ -21,7 +21,7 @@ spec:
       echo-server:
         strategy: RollingUpdate
         containers:
-          echo-server:
+          app:
             image:
               repository: ghcr.io/mendhak/http-https-echo
               tag: 37
@@ -60,13 +60,11 @@ spec:
         runAsGroup: *uid
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *port
     serviceMonitor:
       app:
-        serviceName: *app
         endpoints:
           - port: http
             scheme: http
