--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
               limits:
                 memory: 128Mi
         containers:
-          gatus:
+          app:
             image:
               repository: ghcr.io/twin/gatus
               tag: v5.23.2@sha256:041514059279f102d8e549a7c7c9f813ae9a0bf505c6d7c37aea9201af0bec3a
@@ -110,7 +110,7 @@ spec:
         type: emptyDir
       config-file:
         type: configMap
-        name: "{{ .Release.Name }}-config"
+        name: "{{ .Release.Name }}-configmap"
         globalMounts:
           - path: /config/config.yaml
             subPath: config.yaml
