--- a/kubernetes/apps/observability/gatus/app/kustomization.yaml
+++ b/kubernetes/apps/observability/gatus/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./prometheusrule.yaml
   - ./rbac.yaml
 configMapGenerator:
-  - name: gatus-config
+  - name: gatus-configmap
     files:
       - config.yaml=./resources/config.yaml
 generatorOptions:
