--- a/kubernetes/apps/observability/kromgo/app/kustomization.yaml
+++ b/kubernetes/apps/observability/kromgo/app/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: kromgo-config
+  - name: kromgo-configmap
     files:
       - config.yaml=./resources/config.yaml
 generatorOptions:
