--- a/kubernetes/apps/database/dragonfly/ks.yaml
+++ b/kubernetes/apps/database/dragonfly/ks.yaml
@@ -41,11 +41,11 @@ spec:
       namespace: *namespace
     - name: onepassword
       namespace: security
-  healthCheckExprs:
-    - apiVersion: dragonflydb.io/v1alpha1
-      kind: Dragonfly
-      current: status.phase == 'ready'
-      failed: status.phase != 'ready'
+  # healthCheckExprs:
+  #   - apiVersion: dragonflydb.io/v1alpha1
+  #     kind: Dragonfly
+  #     current: status.phase == 'ready'
+  #     failed: status.phase != 'ready'
   interval: 1h
   path: ./kubernetes/apps/database/dragonfly/cluster
   prune: true
