chore: use .Release.Name where available & make use of added app-template features

--- a/kubernetes/apps/network/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/apps/network/cloudflared/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name cloudflare-tunnel
+  name: cloudflared
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: cloudflared-secret
     template:
       data:
         CLOUDFLARE_TUNNEL_ID: "{{ .CLOUDFLARE_TUNNEL_ID }}"
