--- a/kubernetes/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflared/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app cloudflared
+  name: cloudflared
 spec:
   interval: 1h
   chartRef:
@@ -19,15 +19,14 @@ spec:
   values:
     controllers:
       cloudflared:
-        replicas: 2
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          cloudflared:
+          app:
             image:
               repository: docker.io/cloudflare/cloudflared
-              tag: 2025.8.1
+              tag: 2025.8.1@sha256:b77d84e8704db38db22c22661cf7e56468c526e3a6a5fe9c8b7c151452fa1472
             env:
               TZ: ${CONFIG_TIMEZONE}
               NO_AUTOUPDATE: true
@@ -35,11 +34,10 @@ spec:
               TUNNEL_METRICS: 0.0.0.0:8080
               TUNNEL_ORIGIN_ENABLE_HTTP2: true
               TUNNEL_TRANSPORT_PROTOCOL: quic
-              TUNNEL_POST_QUANTUM: true
               TUNNEL_ID:
                 valueFrom:
                   secretKeyRef:
-                    name: cloudflare-tunnel
+                    name: "{{ .Release.Name }}-secret"
                     key: CLOUDFLARE_TUNNEL_ID
             args:
               - tunnel
@@ -75,22 +73,13 @@ spec:
         runAsNonRoot: true
         runAsUser: &uid 65534
         runAsGroup: *uid
-      topologySpreadConstraints:
-        - maxSkew: 1
-          topologyKey: kubernetes.io/hostname
-          whenUnsatisfiable: DoNotSchedule
-          labelSelector:
-            matchLabels:
-              app.kubernetes.io/name: *app
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *port
     serviceMonitor:
       app:
-        serviceName: *app
         endpoints:
           - port: http
             scheme: http
@@ -100,14 +89,14 @@ spec:
     persistence:
       config:
         type: configMap
-        name: cloudflared-config
+        name: "{{ .Release.Name }}-configmap"
         globalMounts:
           - path: /etc/cloudflared/config/config.yaml
             subPath: config.yaml
             readOnly: true
       credentials:
         type: secret
-        name: cloudflare-tunnel
+        name: "{{ .Release.Name }}-secret"
         globalMounts:
           - path: /etc/cloudflared/creds/credentials.json
             subPath: credentials.json
