--- a/kubernetes/apps/network/cloudflared/app/kustomization.yaml
+++ b/kubernetes/apps/network/cloudflared/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./dnsendpoint.yaml
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: cloudflared-config
+  - name: cloudflared-configmap
     files:
       - config.yaml=./resources/config.yaml
 generatorOptions:
