--- a/kubernetes/apps/media/jellystat/app/externalsecret.yaml
+++ b/kubernetes/apps/media/jellystat/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name jellystat
+  name: jellystat
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: jellystat-secret
     template:
       data:
         ## Jellystat
