--- a/kubernetes/apps/media/lidarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/lidarr/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name lidarr
+  name: lidarr
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: lidarr-secret
     template:
       data:
         ## Lidarr
