--- a/kubernetes/apps/media/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/bazarr/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app bazarr
+  name: bazarr
 spec:
   interval: 1h
   chartRef:
@@ -28,9 +28,9 @@ spec:
               tag: 17
             envFrom: &envFrom
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
         containers:
-          bazarr:
+          app:
             image:
               repository: ghcr.io/home-operations/bazarr
               tag: 1.5.2@sha256:dbc87e5ce9e199709188e152e82b3ff5d33e6521a1b3d61e465aa75b4b739e7f
@@ -70,7 +70,6 @@ spec:
         supplementalGroups: [4000]
     service:
       app:
-        controller: *app
         ports:
           http:
             port: *port
@@ -89,7 +88,7 @@ spec:
               - *host
     persistence:
       config:
-        existingClaim: ${VOLSYNC_CLAIM}
+        existingClaim: "{{ .Release.Name }}"
       media:
         type: nfs
         server: ${SECRET_NAS_IP}
