--- a/kubernetes/apps/media/jellystat/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellystat/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app jellystat
+  name: jellystat
 spec:
   interval: 1h
   chartRef:
@@ -28,9 +28,9 @@ spec:
               tag: 17
             envFrom: &envFrom
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
         containers:
-          jellystat:
+          app:
             image:
               repository: docker.io/cyfershepard/jellystat
               tag: 1.1.6@sha256:683358900cff8d299fa93add731b2976d7c9bc49f9593f40f5351498fd488767
@@ -59,7 +59,6 @@ spec:
         runAsGroup: *uid
     service:
       app:
-        controller: *app
         ports:
           http:
             port: 3000
