--- a/kubernetes/apps/media/unpackerr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/unpackerr/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name unpackerr
+  name: unpackerr
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: unpackerr-secret
     template:
       data:
         ## Radarr
