--- a/kubernetes/apps/downloads/qbittorrent/app/externalsecret.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/externalsecret.yaml
@@ -8,32 +8,17 @@ spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
-  data:
-    - secretKey: WIREGUARD_ENDPOINT_IP
-      remoteRef:
+  target:
+    name: qbittorrent-secret
+    template:
+      data:
+        WIREGUARD_ENDPOINT_IP: "{{ .QBITTORRENT_WIREGUARD_ENDPOINT_IP }}"
+        WIREGUARD_ENDPOINT_PORT: "{{ .QBITTORRENT_WIREGUARD_ENDPOINT_PORT }}"
+        WIREGUARD_PUBLIC_KEY: "{{ .QBITTORRENT_WIREGUARD_PUBLIC_KEY }}"
+        WIREGUARD_PRIVATE_KEY: "{{ .QBITTORRENT_WIREGUARD_PRIVATE_KEY }}"
+        WIREGUARD_ADDRESSES: "{{ .QBITTORRENT_WIREGUARD_ADDRESSES }}"
+        DNS_ADDRESS: "{{ .QBITTORRENT_DNS_ADDRESS }}"
+        WIREGUARD_ALLOWED_IPS: "{{ .QBITTORRENT_WIREGUARD_ALLOWED_IPS }}"
+  dataFrom:
+    - extract:
         key: ovpn
-        property: QBITTORRENT_WIREGUARD_ENDPOINT_IP
-    - secretKey: WIREGUARD_ENDPOINT_PORT
-      remoteRef:
-        key: ovpn
-        property: QBITTORRENT_WIREGUARD_ENDPOINT_PORT
-    - secretKey: WIREGUARD_PUBLIC_KEY
-      remoteRef:
-        key: ovpn
-        property: QBITTORRENT_WIREGUARD_PUBLIC_KEY
-    - secretKey: WIREGUARD_PRIVATE_KEY
-      remoteRef:
-        key: ovpn
-        property: QBITTORRENT_WIREGUARD_PRIVATE_KEY
-    - secretKey: WIREGUARD_ADDRESSES
-      remoteRef:
-        key: ovpn
-        property: QBITTORRENT_WIREGUARD_ADDRESSES
-    - secretKey: DNS_ADDRESS
-      remoteRef:
-        key: ovpn
-        property: QBITTORRENT_DNS_ADDRESS
-    - secretKey: WIREGUARD_ALLOWED_IPS
-      remoteRef:
-        key: ovpn
-        property: QBITTORRENT_WIREGUARD_ALLOWED_IPS
